src/objects/EC_Order_Submission_Error__c.object
<CustomObject>
    <fields>
        <fullName>EC_CC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Order Submission Errors</relationshipLabel>
        <relationshipName>Order_Submission_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EC_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EC_Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EC_Web_Service_Name__c</fullName>
        <label>Web Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Submission Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EC_CC_Order__c</columns>
        <columns>EC_Error_Description__c</columns>
        <columns>EC_Request__c</columns>
        <columns>EC_Web_Service_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Order Submission Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Submission Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>